20081007  Tue Oct  7 23:27:19 EDT 2008
    New Features
    * Added named parameters.

    Docs
    * Some documentation on what is not allowed, even if we don't
      yet check for it.
    * More thanks!
    * Add an example and comparision with regular Perl
    * Add some debugging tips


20081006  Mon Oct  6 02:24:36 EDT 2008
    New Features
    * Implemented "is alias", "is ro", "is rw" and "is copy".
    * Multiple traits supported "is copy is rw"
    * Implemented ! and ? (required and optional arguments)

    Bug Fixes
    * Stole some code from MooseX::Method::Signatures to make attributes
      parse better.  (thanks to Florian Ragwitz)

    Other
    - Repository moved to github.
    - Changing to ISO date versions.


0.11  Sat Sep 27 16:47:51 EDT 2008
    New Features
    * Added the "$arg!" required syntax (currently does nothing)
    * Attributes now work (thanks to mst)

    New Docs
    - Documented how to set a trait and a default
    * Document that earlier params may be used in defaults.
    * Document that @_ is left intact
    * Clarify aliased ref behavior
    * Document anonymous methods

    Bug Fixes
    * Protect against complicated default expressions


0.10  Sun Sep 21 20:04:41 PDT 2008
    New Features
    * Added "$class:" change the invocant a la Perl 6.
    * Added "$arg = EXPR" to set defaults.
    * Added "$arg?" optional param syntax (currently does nothing)
    * Added "$arg is foo" param traits (currently does nothing)
    * Expose a way to play with the prototype handler.

    Doc Fixes
    - Change "prototype" to "signature" to avoid confusion with Perl's
      built in prototypes.


0.05  Sun Sep 21 15:17:16 PDT 2008
    Bug Fixes
    * methods now get the right name in caller(), not "Class::__ANON__".
    * The \@foo prototype no longer has a performance hit
    * Closures now work with \@foo
      (All the above thanks to Matthijs van Duin and his Sub::Name and
       Data::Alias)

    Test Fixes