@@ -1,6 +1,6 @@
 ---
 name: Method-Signatures
-version: 20081007
+version: 20081008
 author:
   - 'Michael G Schwern <schwern@pobox.com>'
 abstract: method declarations with signatures and no source filter
@@ -25,7 +25,7 @@ recommends:
 provides:
   Method::Signatures:
     file: lib/Method/Signatures.pm
-    version: 20081007
+    version: 20081008
 generated_by: Module::Build version 0.3
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
