@@ -15,11 +15,11 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 65ceb1c25f4b71f2f5040e2e4d86238fc5cc6ce3 Build.PL
-SHA1 de637d13b3370d1029383f6c92958b6fb80e6680 Changes
+SHA1 2a8a44b7d7b9453ec13db7d49a1b2b093b381541 Changes
 SHA1 e249f6b035937fd44c1f5b195e9601540c501ec9 MANIFEST
 SHA1 63ed48fa5b27e3248bae4db80c5a18f420bdb1a7 MANIFEST.SKIP
-SHA1 18ae96ccabc5c636c55e78e99138880ca9517f63 META.yml
-SHA1 29b4116f79740c53eaef382fdebe3bd73898383f lib/Method/Signatures.pm
+SHA1 1f3d249aac4383bb799c7d01f43397b88b26b525 META.yml
+SHA1 c8a4b3edd3fd8aa81424b37fb413b91ab7fd42f4 lib/Method/Signatures.pm
 SHA1 ac6687796e415550e211d720f4b7cfb6d2d09713 t/alias.t
 SHA1 e33a7883ed81c0d510f705d92e5865249ef49a72 t/anon.t
 SHA1 56c303e608886e482fe32e63789b85eb0cdf5894 t/attributes.t
@@ -38,7 +38,7 @@ SHA1 34bffb52545b96e498169bf81076206714dc82f0 t/traits.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Darwin)
 
-iEYEARECAAYFAkjsKM8ACgkQWMohlhD1QycUHwCfRtdocMg2g/7r/xj6wJ/XFNIe
-tGQAnArUst8Z7VByh4o44kHZo7jUkAkq
-=AoVp
+iEYEARECAAYFAkjsulIACgkQWMohlhD1QyfT0ACgtw2lK+FCHmXtFHkehXqLOU21
+Zu8AniKMj6iqirrD0BXlWf6z89hqzLvr
+=LYN+
 -----END PGP SIGNATURE-----
